# MyCLI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: command.h  command_executor.h  command_parser.h  command_register.h  command_result.h  mycli.h  parser.h
src/: command_executor.cpp  command_parser.cpp  command_register.cpp  mycli.cpp  parser.cpp
